# quarry

./: README.md  pyproject.toml
src/quarry/: server.py  store.py
